# ChangeLog for dev-ruby/rcairo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rcairo/ChangeLog,v 1.27 2008/10/16 09:22:47 flameeyes Exp $

  16 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> rcairo-1.8.0.ebuild:
  Add missing IUSE.

*rcairo-1.8.0 (16 Oct 2008)

  16 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> +rcairo-1.8.0.ebuild:
  Version bump, use gem.

*rcairo-1.6.2 (04 Jul 2008)

  04 Jul 2008; Hans de Graaff <graaff@gentoo.org> +rcairo-1.6.2.ebuild:
  Version bump, closing #230736.

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org> -rcairo-1.2.0.ebuild,
  rcairo-1.4.1.ebuild, -rcairo-1.5.0.ebuild, rcairo-1.5.1.ebuild:
  Add missing pkgconfig dependency, fixing #216384

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org> -rcairo-1.2.0.ebuild,
  -rcairo-1.5.0.ebuild:
  Remove old versions

*rcairo-1.5.1 (20 Jan 2008)

  20 Jan 2008; Hans de Graaff <graaff@gentoo.org> +rcairo-1.5.1.ebuild:
  Version bump #206662

  14 Sep 2007; Christoph Mende <angelos@gentoo.org> rcairo-1.4.1.ebuild:
  Stable on amd64 wrt bug #192188

  14 Sep 2007; nixnut <nixnut@gentoo.org> rcairo-1.4.1.ebuild:
  Stable on ppc wrt bug 192188

  12 Sep 2007; Raúl Porcel <armin76@gentoo.org> rcairo-1.4.1.ebuild:
  alpha/ia64 stable wrt #192188

  12 Sep 2007; Markus Ullmann <jokey@gentoo.org> rcairo-1.4.1.ebuild:
  Stable on sparc/x86 wrt bug #192188

*rcairo-1.5.0 (11 Sep 2007)

  11 Sep 2007; Hans de Graaff <graaff@gentoo.org> +rcairo-1.5.0.ebuild:
  Version bump with many API improvements, see bug #191841.

  21 May 2007; Raúl Porcel <armin76@gentoo.org> rcairo-1.2.0.ebuild:
  alpha stable wrt #169094

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org> rcairo-1.2.0.ebuild:
  stable amd64, bug 169094

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> rcairo-1.2.0.ebuild:
  ia64 stable wrt bug 169094

*rcairo-1.4.1 (10 Mar 2007)

  10 Mar 2007; Richard Brown <rbrown@gentoo.org> rcairo-1.2.0.ebuild,
  +rcairo-1.4.1.ebuild: