@@ -6,16 +6,18 @@ DIST cairo-1.8.0.gem 274944 RMD160 dfa41ac559314ebd0a917aaf5b78770d807ced58 SHA1
 DIST rcairo-1.4.1.tar.gz 43291 RMD160 700e286ab547b0fa94b78be115d1a2f88076a94a SHA1 537b00e6773e77d380ba9a5cc3b4fff8651f72e8 SHA256 b16c3a2fcf02dc1c7e06603f0111427d036c1d506f37397f17662fb1a3bb3644
 DIST rcairo-1.5.1.tar.gz 68494 RMD160 d27fa233f6e3534d6e3f95868e82a57baa494c10 SHA1 ee50e43c3f9ac6ed28f5c820f498420585965b59 SHA256 de937298cf8ffa129e452946ba52aa2614e930a77346895da2eec72c7700ef3b
 DIST rcairo-1.6.2.tar.gz 221770 RMD160 ce38c16fc293d8b5113e33761761c30c2c1b0fc3 SHA1 a4d00f91131d378f68016ed19a5b3f1b77809477 SHA256 39b55519e51c82156b96d5e362020a5c5799c67ff7ce3e6499d324bebfe80015
+DIST rcairo-1.8.0.tar.gz 278009 RMD160 ef3656dcc52081a9d792e4812ad30a8b911aa695 SHA1 de60c4c4c4fd9eeee6ab93a3ca3e0c2e785caafb SHA256 0bd588d45c3700615abb3a82df3f5e53d42eb0bfbafbad72170889d25575ce3c
 EBUILD rcairo-1.4.1.ebuild 538 RMD160 7718902a341a415d434807687ad437722b0d6eaf SHA1 fc28be48d87d8c3b96db0583a45aa0bbde886366 SHA256 ca9537141b2d38470b76d6998488d347917a8523743d55d72a15ed483cea179b
 EBUILD rcairo-1.5.1.ebuild 552 RMD160 6099bda6c3eded8cdc0493dee04a41f210004114 SHA1 955739a1224ce93264e4eb2688be92780a7034a4 SHA256 84d736ab3ff7f8aa0a7ae58bb33f2b52f1d0fbd713fad725bfb271cf6c06a244
 EBUILD rcairo-1.6.2.ebuild 552 RMD160 cf08415fe65923a10c1326bd5e235e63dfed9ca9 SHA1 7f23c6d88c9ccee6f17a57c7af8b798edafe58f2 SHA256 17c1b0a6a0276464fec4a100b14fea7e4dd06db821b805b499b51b2ed53d7bae
-EBUILD rcairo-1.8.0.ebuild 563 RMD160 6d7a033eebdfd4a11d61e464ea36455a0bd15199 SHA1 ad7de17680d9c9569c6d9029e4389906ced35b38 SHA256 a77d600d94a4d7c7a8051ce5c1ab4e047440fa09311aeb39f6745d7748b6786c
-MISC ChangeLog 3595 RMD160 7cd905643d2fca24f1410840b4dd1b16e1214c33 SHA1 28a3ccd498aec01d42db37b74a1a5c49d7466df0 SHA256 d71c11d492fb4d884349027d53c68ca508f1b99528cde1e77dee88c0956bef31
+EBUILD rcairo-1.8.0-r1.ebuild 1000 RMD160 688373bfec5c391cb54ec06de765ba9995cf3235 SHA1 dbb0c98a19a86e4af423e73bb17894fc1181f143 SHA256 c9027e4e6eaa5c2a2b310297244c2439bdcd8d7cc429a06745960c3c051a2659
+EBUILD rcairo-1.8.0.ebuild 579 RMD160 0bbe6d5e20fa280180127e499bb349f015b17628 SHA1 b24ba659a0c6bf7a0bdb3e5c4b2f8419fda2c1b2 SHA256 d5a98a0b627747b2bb1b5fa4316270659dc2dff56cecb988cb7ca941f0f75380
+MISC ChangeLog 3942 RMD160 9b3584a1657e685b1994b2817c2b1fe4bcbac6e2 SHA1 b4bf44c0442f5505192985edd7622c612532982d SHA256 537c63a9e115ee834c27a81693fd35fed892a26a322a331c49bf3623aff9ded6
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkj3B+wACgkQAiZjviIA2XjtgQCgihtbuGg4bC74V24+GA+JBXJV
-rzgAoIMjSnzqxhEegjsysvJsse4AvU+2
-=1EeC
+iEYEARECAAYFAkn997oACgkQqj4ysMWt/vuOmgCgjUGMJ3YPuFmQz5LGQX3OSc4y
+hucAoKVj+aOUs7g7aPnfoy9+UG90k+Gj
+=Hatr
 -----END PGP SIGNATURE-----
