@@ -1,6 +1,14 @@
 # ChangeLog for dev-ruby/rcairo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rcairo/ChangeLog,v 1.27 2008/10/16 09:22:47 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rcairo/ChangeLog,v 1.28 2009/05/03 19:59:48 graaff Exp $
+
+*rcairo-1.8.0-r1 (03 May 2009)
+
+  03 May 2009; Hans de Graaff <graaff@gentoo.org> rcairo-1.8.0.ebuild,
+  +rcairo-1.8.0-r1.ebuild:
+  Switch away from the gem because the gem Makefile has weird issues when
+  installing in some instances, see bug #264272. Install fake gemspec to
+  hopefully keep software depending on the gem being installed working.
 
   16 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> rcairo-1.8.0.ebuild:
   Add missing IUSE.
